# src/modules/chats/dto/chat.dto.ts
@@ -1,32 +1,7 @@
-import { createZodDto } from "nestjs-zod";
-import { ChatSchema } from "../schemas/chat.schema";
-import { IsEnum, IsNotEmpty, IsOptional, IsUUID } from "class-validator";
-import { ChatStatus, ChatPriority, ChatChannel } from "../chat.enum";
+import { createZodDto } from 'nestjs-zod';
 
-export class ChatDto {
-  @IsEnum(ChatStatus)
-  @IsOptional()
-  status: ChatStatus;
+import { CreateChatSchema, UpdateChatSchema } from '../../../contracts/index';
 
-  @IsEnum(ChatPriority)
-  @IsOptional()
-  priority: ChatPriority;
+export class CreateChatDto extends createZodDto(CreateChatSchema) {}
 
-  @IsEnum(ChatChannel)
-  @IsOptional()
-  channel: ChatChannel;
-
-  @IsUUID()
-  @IsNotEmpty()
-  client_id: string;
-}
-
-export class CreateChatDto extends createZodDto(
-  ChatSchema.omit({ id: true, lastMessageId: true, createdAt: true })
-) { }
-
-export class UpdateChatDto extends createZodDto(
-  ChatSchema.partial().omit({ id: true, createdAt: true })
-) { }
-
-export class ChatResponseDto extends createZodDto(ChatSchema) { }
+export class UpdateChatDto extends createZodDto(UpdateChatSchema) {}
